hphp/test/zend/bad/ext/reflection/tests/ReflectionClass_isSubclassOf_error.php
<?php
class A {}
$rc = new ReflectionClass('A');

var_dump($rc->isSubclassOf());
var_dump($rc->isSubclassOf('A',5));

?>
